--- a/style.css
+++ b/style.css
@@ -105,11 +105,11 @@ a {
 
 .pixel.active {
     background-color: black;
-    /*border: 1px solid black;*/
+    border: 1px solid black;
 }
 
-.noBorder {
-    border: 1px solid black;
+.border {
+    border: 1px solid gainsboro;
 }
 
 ** {
