--- a/style.css
+++ b/style.css
@@ -53,10 +53,29 @@ body {
 }
 
 button {
+    flex: 0 0 auto;
     height: 100px;
     font-size: 16px;
 }
 
+.color-picker,
+.color-picker div {
+    display: flex;
+    flex-direction: column;
+    flex: auto;
+    margin: 8px;
+    /*border: 1px solid black;*/
+}
+
+.preview {
+    flex: 0 0 auto;
+    height: 20px;
+    border: 4px inset rgb(150, 0, 0);
+}
+
+#r{background-color: rgb(255, 100, 100);}
+#g{background-color: rgb(100, 255, 100);}
+#b{background-color: rgb(100, 100, 255);}
 
 a {
     text-decoration: none;
